--- a/index.html
+++ b/index.html
@@ -7,27 +7,23 @@
     <title>Assignment</title>
 </head>
 <body>
-    <table border="3" cellspacing="0">
-        <tr>
-            <th colspan="3" bgcolor="beige">Aiza project</th>
+    <h2><font color="skyblue">Assignment no-1</font></h2>
+    <h4><p>
+        <a href="https://aniwave.to/watch/suzume-no-tojimari.xrr5w/ep-1">suzume-no-tojimari</a></h4>
+    <h6><small><i>Suzume no Tojimari  is a 2022 Japanese animated coming-of-age fantasy adventure film written and directed by Makoto Shinkai, produced by CoMix Wave Films, and distributed by Toho.The film follows 17-year-old high school girl Suzume Iwato and young stranger Souta Munakata, who team up to prevent a series of disasters across Japan by sealing doors from the colossal, supernatural worm that causes earthquakes after being released.</i></small></h6>
+            <table border="3" cellspacing="0">
+                <tr>
+              <th colspan="3"><font color="beige">Adventure animation Movie</font></th>
+                </tr>
+                <tr><td>
+                    <img src="WhatsApp Image 2023-10-22 at 7.59.34 PM.jpeg"width="280"height="280"></td>
+                    <td><iframe width="300"height="280" src="VID-20231022-WA0003.mp4"></iframe></td>
+                </td></tr>
+            <tr>
+                <td align="center"><i><font color="blackred">Requiem for a Dream</font></i></td></td> <td>
+                <audio src="WhatsApp Audio 2023-10-22 at 7.59.32 PM.ogg"controls></audio>
+            </td>
         </tr>
-        <tr><td>
-            <img src="WhatsApp Image 2023-10-22 at 7.59.34 PM.jpeg"width="380"height="280"></td>
-            <td><iframe width="300"height="280" src="VID-20231022-WA0003.mp4"></iframe></td>
-        </td></tr>
-    <tr>
-        <td><small>Suzume no Tojimari  is a 2022 Japanese animated coming-of-age fantasy adventure film written and directed by Makoto Shinkai, produced by CoMix Wave Films, and distributed by Toho.</small></td> <td>
-            <audio src="WhatsApp Audio 2023-10-22 at 7.59.32 PM.ogg"controls></audio>
-        </td>
-    </tr>
-    <tr>
-        <td colspan="3">
-
-            <p align="center">
-                <a href="https://aniwave.to/watch/suzume-no-tojimari.xrr5w/ep-1">suzume-no-tojimari</a>
-            </p>
-        </td>
-    </tr>
-</table>
+    </table>
 </body>
 </html>
